# ezcfg

./: Android.mk  configure.ac
doc/: agent1.conf  agent2.conf  agent_env_default.conf
doc/android/: agent1.conf  agent2.conf  agent_env.conf  agent_http_server.conf  agent_init.conf
doc/linux/: agent_http_server.conf  agent_init.conf
ezcd/: configure.ac
ezcd/include/: ezcd.h  utils.h
ezcd/lib/: Makefile.am
ezcd/src/: agent_env.c  eznvdump.c  main.c
ezcd/src/rcso/: env_action_br_lan_if.c  env_action_eth_lan_if.c  env_action_eth_wan_if.c  env_action_iptables.c  env_action_lan.c  env_action_load_modules.c  env_action_loopback.c  env_action_preboot.c  env_action_wan.c  env_action_wan_if.c  env_action_wifi_lan_if.c
ezcd/src/utils/: utils_check_partition_ready.c  utils_execute.c  utils_get_device_info.c  utils_handle_kernel_module.c  utils_init_ezcfg_api.c  utils_make_dirs.c  utils_mkdir.c  utils_mount_partition.c  utils_system.c  utils_udev_trigger_pop.c
libezcfg/: configure.ac  exported_symbols  exported_symbols_test
libezcfg/api/include/: ezcfg-api.h
libezcfg/api/src/: api-agent.c  api-common.c  api-master.c  api-nvram.c
libezcfg/include/: ezcfg-json_http.h  ezcfg-nvram_agent.h  ezcfg-nvram_defaults.h  ezcfg-nvram_environment.h  ezcfg-nvram_http.h  ezcfg-nvram_meta.h  ezcfg-nvram_process.h  ezcfg-nvram_socket.h  ezcfg-priv_agent.h  ezcfg-priv_auth.h  ezcfg-priv_basic_http.h  ezcfg-priv_basic_linked_list.h  ezcfg-priv_basic_nv_linked_list.h  ezcfg-priv_basic_process.h  ezcfg-priv_basic_socket.h  ezcfg-priv_basic_thread.h  ezcfg-priv_basic_uuid.h  ezcfg-priv_binary_tree.h  ezcfg-priv_common.h  ezcfg-priv_composite_nv_json_http.h  ezcfg-priv_composite_socket_agent.h  ezcfg-priv_http.h  ezcfg-priv_json.h  ezcfg-priv_linked_list.h  ezcfg-priv_meta_nvram.h  ezcfg-priv_nvram.h  ezcfg-priv_socket.h  ezcfg-priv_stack_list.h  ezcfg-priv_util.h  ezcfg-private.h  ezcfg-sys.h  ezcfg-types.h  ezcfg.h
libezcfg/lib/: Makefile.am
libezcfg/src/agent/: agent.c  agent_core.c  agent_master.c  agent_worker.c  agent_worker_json_http.c
libezcfg/src/auth/: auth.c
libezcfg/src/basic/http/: http.c
libezcfg/src/basic/json/: json.c
libezcfg/src/basic/linked_list/: linked_list.c
libezcfg/src/basic/nv_linked_list/: nv_linked_list.c
libezcfg/src/basic/nv_pair/: nv_pair.c
libezcfg/src/basic/process/: process.c
libezcfg/src/basic/socket/: socket.c  socket_http.c
libezcfg/src/basic/thread/: thread.c
libezcfg/src/common/: ezcfg.c  ezcfg_local.h  link_list.c  meta_nvram.c
libezcfg/src/composite/nv_json_http/: nv_json_http.c
libezcfg/src/composite/socket_agent/: socket_agent.c  socket_agent_comm_api.h  socket_agent_env_thread.c  socket_agent_local.h  socket_agent_master_thread.c  socket_agent_worker_thread.c  socket_agent_worker_thread_http.c  socket_agent_worker_thread_nv_json_http.c
libezcfg/src/css/: css.c
libezcfg/src/ctrl/: ctrl.c  ctrl_ipc.c
libezcfg/src/http/: http.c  http_html_index.c
libezcfg/src/http/admin/: http_html_admin_management_authz.c  http_html_admin_management_default.c  http_html_admin_setup_lan.c  http_html_admin_view_dhcp_client_table.c
libezcfg/src/igrs/: igrs.c  igrs_create_session.c  igrs_invoke_service.c
libezcfg/src/json/: json.c  json_http.c  json_http_nvram.c
libezcfg/src/list/: linked_list.c
libezcfg/src/locale/: locale.c
libezcfg/src/nvram/: nvram.c
libezcfg/src/soap/: soap_http.c  soap_http_nvram.c
libezcfg/src/socket/: socket.c  socket_http.c
libezcfg/src/util/: util_proc_check_pid.c  util_snprintf_ns_name.c  util_socket_protocol.c  util_socket_role.c
libezcfg/src/xml/: xml.c
libezcfg/tests/json/: check_json.c
